--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,22 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 
-body{
-    background-color: rgb(32, 3, 50);
-    color: beige;
+
+/* body{
+    background-color: rgb(21, 8, 52);
 }
+h2,h3,h1{
+    color: azure;
+} */
 .modal-content{
 background-color: rgb(247, 245, 216);
+border: 8px solid rgb(199, 144, 50);
+border-radius: 40px;
 }
 /* .modal-title{
     align-items: center;
     text-align: center;
 } */
+.rf{
+    display: flex;
+    justify-content: space-between;
+    justify-items: auto;
+}
